--- a/main.css
+++ b/main.css
@@ -1,16 +1,26 @@
 body {
     font-family: helvetica;
     background-color: cornsilk;
+    /* background-image: url('bg2.jpg');
+    background-size: 50%; */
 }
 
 .header {
-    padding: 20px;
+    padding: 10px;
     text-align: center;
-    background: #1abc9c;
-    color: white;
+    background:#2e416a;
+    color: darkgoldenrod;
     font-size: 30px;
-}
+  }
 
+/* observablehq-cb04c636{
+    width:100%;
+    height:100%;
+    margin: 0px;
+    border: 0;
+    overflow: hidden;
+    display:block;
+  } */
 
 ul {
     font-family: monospace;
@@ -23,10 +33,19 @@ li {
     list-style: square;
 }
 
+/* img {
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+} */
+
+
 
 
   #observablehq-cb04c636 { white-space: nowrap; }
   #observablehq-cb04c636 canvas {
+    /* position: relative;
+    display: block; */
     float: left;
     margin: 5px;
   }
